refactor header, added hamburger menu, added direct link to user dashboard

--- a/frontend/src/app/components/user-login/user-login.component.html
+++ b/frontend/src/app/components/user-login/user-login.component.html
@@ -14,8 +14,8 @@
   </div>
 </mat-card>
 
-  <div *ngIf="!isUserLoggedIn" align="end">
-      <button mat-flat-button class="button_standard" [routerLink]="['/registration/0']">Registration</button>
+  <div *ngIf="!isUserLoggedIn">
+      <button mat-flat-button class="button_standard" routerLink="/registration/0">Registration</button>
       <button mat-flat-button class="button_standard" (click)="openDialog()">Password forgotten</button>
   </div>
 
