--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -37,8 +37,27 @@ mat-toolbar{
 .center-cropped{
   object-fit: cover; /* Do not scale the image */
   object-position: center; /* Center the image within the element */
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
   opacity: 0.8;
 
 }
+
+.headerNav{
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: center;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+.headerItem{
+  color:  #B82D70;
+  text-shadow: 0px 0px 8px #B82D70;
+  padding-left: 5px;
+  padding-right: 10px;
+  margin-left: 20px;
+}
+
+
