--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -7,19 +7,28 @@
       </a>
     </div>
     <span class="spacer"></span>
+
     <div *ngIf="!isUserLoggedIn">
       <button mat-button class="storMainColor" [routerLink]="['/registration',0]" routerLinkActive="active">Registration</button>
       <button mat-button class="storMainColor" routerLink="/login" routerLinkActive="active">Login<mat-icon>login</mat-icon></button>
     </div>
-    <div *ngIf="isUserLoggedIn">
-      <button class="storMainColor" mat-button color="storMainColor" [matMenuTriggerFor]="menu"><img class ="center-cropped"src ="../assets/cd/hammer.gif"><br> {{isUserName}}</button>
+
+    <div *ngIf="isUserLoggedIn" class="headerNav">
+      <button mat-menu-item routerLink="/productForm/0" routerLinkActive="active" class="headerItem">Add product</button>
+      <button class="headerItem" mat-button color="storMainColor"><img class ="center-cropped"src ="../assets/cd/hammer.gif" routerLink="/user" routerLinkActive="active"><br>{{isUserName}}</button>
+      <button class="headerItem" mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
     </div>
+
     <mat-menu #menu>
-      <button mat-menu-item routerLink="/user" routerLinkActive="active">My Profile</button>
+      <button mat-menu-item routerLink="/home" routerLinkActive="active">Home</button>
+      <button mat-menu-item routerLink="/user" routerLinkActive="active">My profile</button>
+      <button mat-menu-item [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit profile</button>
+      <button mat-menu-item routerLink="/productForm/0" routerLinkActive="active">Add product</button>
       <div *ngIf="isUserAdmin">
         <button mat-menu-item routerLink="/admin" routerLinkActive="active">Admin</button>
       </div>
-      <button mat-menu-item (click)="logout()">Logout</button>
+      <button mat-menu-item (click)="logout()"><mat-icon>logout</mat-icon>Logout</button>
     </mat-menu>
+
   </mat-toolbar-row>
 </mat-toolbar>
