--- a/frontend/src/app/components/dashboard/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/dashboard/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="searchBar">
-  <input type="text" [(ngModel)]="name" placeholder="Search" name="name" class="bar">
+  <input class="bar" type="text" [(ngModel)]="name" placeholder="Search" name="name" >
 
   <button mat-button class="searchButton" [routerLink]="['/s']" [queryParams]="{n: name}"><mat-icon>search</mat-icon>Search</button>
   <button mat-button class="clearIcon" *ngIf="name !== ''" matSuffix mat-icon-button (click)="name = ''"><mat-icon>clear</mat-icon></button>
