--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -31,8 +31,8 @@
 <h2>Your products</h2>
   <div  fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
     <mat-card class="productItem_Card">
-    <mat-card-actions><button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
-    </mat-card-actions>
+    <div class="center"><button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
+    </div>
     </mat-card>
     <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
       <mat-card class="productItem_Card">
