--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar role="heading">
+<mat-toolbar role="heading" class="header">
   <mat-toolbar-row>
 
     <div class="nav">
@@ -8,7 +8,7 @@
         <img src="assets/cd/pixel-home.png"  class="logo" alt="Home Button"  matTooltip="Go Home" />
       </a>
       <span class="only-show-on-hover">Go to Home</span>
-      
+
     </div>
     <span class="spacer"></span>
     <div *ngIf="!isUserLoggedIn">
