--- a/frontend/src/app/components/product-display/product-display.component.html
+++ b/frontend/src/app/components/product-display/product-display.component.html
@@ -8,7 +8,7 @@
       <mat-card-header>
         <mat-card-content>
           <!--<img class="img" [src]="productItem.picture[0]" />-->
-          <img class="img" src="assets/cd/mdb.jpg">
+          <img class="center-cropped" src="assets/cd/mdb.jpg">
         </mat-card-content>
         <mat-card-title>
           <button mat-button class="button_fill" [routerLink]="['/productDetail', productItem.productId]" routerLinkActive="active" ><b>{{productItem.productName}}</b>
