--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -21,7 +21,10 @@ mat-toolbar{
   text-shadow: 0px 0px 3px white;
   font-family: 'Press Start 2P', cursive; 
   font-size: smaller;
-  padding-bottom: 50px;
+
+}
+.header{
+  margin-bottom: 50px;
 }
 
 .storMainColor {
