--- a/frontend/src/app/components/product-display/product-display.component.css
+++ b/frontend/src/app/components/product-display/product-display.component.css
@@ -15,3 +15,10 @@ mat-card-footer {
   width: auto;
   opacity: 0.7;
 }
+
+.center-cropped {
+  object-fit: cover; /* Do not scale the image */
+  height: 100%;
+  width: auto;
+  opacity: 0.7;
+}
