--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -42,7 +42,8 @@
         </mat-card-header>
 
         <mat-card-content>
-          <img class="img" [src]="productItem.picture[0]" />
+          <!--<img class="img" [src]="productItem.picture[0]" />-->
+          <img class="img" src="assets/cd/mdb.jpg">
         </mat-card-content>
 
         <mat-card-content>
