--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -50,14 +50,15 @@ mat-toolbar{
   align-items: center;
   margin-bottom: 40px;
   margin-top: 20px;
+  color:  #B82D70;
+  text-shadow: 0px 0px 8px #B82D70;
 }
 
 .headerItem{
+  padding: 0px;
+  margin-right: 20px;
   color:  #B82D70;
   text-shadow: 0px 0px 8px #B82D70;
-  padding-left: 5px;
-  padding-right: 10px;
-  margin-left: 20px;
 }
 
 
