safe changes to productform design

--- a/frontend/src/app/components/productForm/productForm.component.css
+++ b/frontend/src/app/components/productForm/productForm.component.css
@@ -30,12 +30,22 @@
 
 ::ng-deep .mat-typography{
   color: white;
-  font-family: 'Press Start 2P', cursive;
-
+  font-family: 'Press Start 2P', cursive !important;
 }
 
-::ng-deep .mat-step-label .mat-step-label-active .mat-step-label-selected{
+
+
+::ng-deep .mat-step-label .mat-step-label-active .mat-step-label-selected {
   color: white;
   font-family: 'Press Start 2P', cursive;
 
+}
+::ng-deep .mat-step-header .mat-step-label{
+  color: white;
+}
+
+.mat-checkbox{
+  font-family: 'Press Start 2P', cursive;
+  font-size: 12px;
+  margin-right: 20px;
 }
