changed upload picture buttons

--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-search-bar></app-search-bar>
 
-<img src="assets/cd/rocketOnceBlue.gif">
+<img src="assets/cd/rocketFast.gif">
 <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
   <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
     <img class="center-cropped" [src]="productItem.picture[0]" />
