--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -3,32 +3,37 @@
   <mat-tab label ="my Profile" >
 <mat-card class= "myProfile">
   <mat-card-header>
-    <mat-card-title>My Profile</mat-card-title>
   
-    <mat-card-subtitle class = "myProfile">{{userName}}</mat-card-subtitle>
+    <mat-card-title class = "myProfile">{{userName}}'s Profile: </mat-card-title>
   </mat-card-header>
-  <mat-card-content>
-    Adress: <br>
+  <mat-card-content class="content">
+   <div> Address: <br>
     {{userFirstName}} {{userLastName}}<br>
     {{userAddressStreet}}<br>
     {{userAddressPin}} {{userAddressCity}} <br>
-    {{userAddressCountry}} <br>
+    {{userAddressCountry}}     <br>
+    <br>
     <br> <b>
     Your current balance:
     {{userWallet}} CHF
   </b>
+  <br>
+    <br>
+</div>
+<button mat-flat-button class="button_standard" [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit Profile</button>
+<div>
 
+</div>
   </mat-card-content>
+
   <mat-card-actions>
-    <button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
-    <button mat-flat-button class="button_standard" [routerLink]="['/registration/', userId]" routerLinkActive="active">Edit Profile</button>
+    <!--<button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>-->
   </mat-card-actions>
 </mat-card>
 
 </mat-tab>
 
 <mat-tab label = "Your current Products">
-<h2>Your products</h2>
   <div  fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
     <mat-card class="productItem_Card">
     <div class="center"><button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
