--- a/frontend/src/app/components/other-user-dashboard/other-user-dashboard.component.css
+++ b/frontend/src/app/components/other-user-dashboard/other-user-dashboard.component.css
@@ -6,3 +6,20 @@
   width: auto;
   opacity: 0.7;
 }
+
+.otherProfile{
+  background-color: #082A5D;
+  font-family:'Press Start 2P', cursive !important;
+  color: white; 
+  text-shadow: 0px 0px 2px white;
+  font-size: 14px;
+
+}
+.clickable{
+  color:#F7CC18;
+  text-shadow: 0px 0px 8px #F7CC18;
+}
+
+.mat-card{
+  box-shadow:none;
+}
