--- a/frontend/src/app/components/product-detail/product-detail.component.css
+++ b/frontend/src/app/components/product-detail/product-detail.component.css
@@ -7,6 +7,25 @@
 
 .backIcon{
   margin-top: 1%;
-  color: #F0F0F0;
+  color: #F7CC18;
+  text-shadow: 0px 0px 3px #F7CC18;
   margin-bottom: 0px;
+}
+
+.mat-card{
+  background-color: #082A5D;
+  box-shadow: none;
+  color:whitesmoke;
+  font-family: 'Press Start 2P', cursive;
+}
+.clickable{
+  color: #F7CC18;
+
+}
+
+.button_standard{
+  height: 30px;
+  text-align:bottom;
+  margin-top: 289px;
+color:white;
 }
