--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.css
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.css
@@ -35,3 +35,10 @@ text-align: center;
   width: auto;
   opacity: 0.7;
 }
+
+.button_standard{
+  font-size: 8px!important;
+  color: white!important;
+  align-self: center;
+}
+
