--- a/frontend/src/app/components/dashboard/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/dashboard/search-bar/search-bar.component.html
@@ -7,9 +7,11 @@
 
 <div class="catContainer" >
   <div class="bigDisplay" *ngFor="let category of categories">
-   
-      <img class= "categoryIcon" src="{{category.image}}" [routerLink]="['/s']" [queryParams]="{c: category.value}">
+      
+    <div class="categoryButton"  [routerLink]="['/s']" [queryParams]="{c: category.value}">
+      <img class= "categoryIcon" src="{{category.image}}" >
       {{category.value}} 
+    </div>
    <!--<button class="categoryButton" [routerLink]="['/s']" [queryParams]="{c: category.value}">
       {{category.value}} 
     </button>-->
