setting min width for snake component

--- a/frontend/src/app/components/snake-component/snake-component.component.css
+++ b/frontend/src/app/components/snake-component/snake-component.component.css
@@ -12,12 +12,14 @@ br {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 1060px;
 }
 
 .cells {
   display: flex;
   flex-wrap: wrap;
   border-bottom: black solid 10px;
+  min-width: 520px;
 }
 
 .board {
