--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<div >
+
+<img  class= "find-snake" src="assets/cd/fungiFur.gif">
+<b class= "code" >up up down down left right left right b a</b>
+ </div>
+
 <!--<app-footer></app-footer>-->
