--- a/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/dashboard/dashboard.component.css
@@ -49,4 +49,9 @@ hr {
   height: 150px;
   width: 150px;
   opacity: 0.7;
+  border-radius: 7px;
+}
+
+.productList_dashboard{
+margin-top: 70px;
 }
