--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -34,53 +34,20 @@
 </mat-tab>
 
 <mat-tab label = "Your current Products">
-  <div  fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
-    <mat-card class="productItem_Card">
-    <div class="center"><button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
-    </div>
-    </mat-card>
-    <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
+  
+    <div  fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
       <mat-card class="productItem_Card">
-        <mat-card-header>
-          <mat-card-title>{{productItem.productName}}</mat-card-title>
-          <mat-card-subtitle>posted on {{productItem.uploadDate | date: "dd.MM.yy, HH:mm"}}</mat-card-subtitle>
-        </mat-card-header>
-
-        <mat-card-content>
-          <!--<img class="img" [src]="productItem.picture[0]" />-->
-          <img class="img" src="assets/cd/mdb.jpg">
-        </mat-card-content>
-
-        <mat-card-content>
-          <div *ngIf="productItem.isApproved">
-            <p class="text">Approved</p>
-          </div>
-          <div *ngIf="!productItem.isApproved">
-            <b class="text">Awaiting approval</b>
-          </div>
-
-          <div *ngIf="productItem.isAvailable">
-            <p class="text">Available</p>
-          </div>
-
-          <div *ngIf="!productItem.isAvailable">
-            <p class="text"> <b>A buy request is in your inbox</b><br></p>
-
-          </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-flat-button class="button_standard" [routerLink]="['/productForm/', productItem.productId]" routerLinkActive="active">Edit</button>
-          <button mat-flat-button class="button_standard" (click)="deleteProduct(productItem)" [disabled]="!productItem.isAvailable">Delete</button>
-        </mat-card-actions>
-        <hr>
-
-        <br>
-        <button mat-button class="button_fill" [routerLink]="['/', productItem.productCategory]" routerLinkActive="active" ><mat-icon >chevron_right</mat-icon>{{productItem.productCategory}}</button>
-        <button mat-button class="button_fill" [routerLink]="['/', productItem.productLocation]" routerLinkActive="active"><mat-icon >place</mat-icon>{{productItem.productLocation}}</button>
-
+      <div class="center"><button mat-flat-button class="button_standard" [routerLink]="['/productForm/', 0]" routerLinkActive="active">Add Product </button>
+      </div>
       </mat-card>
+      <div class="productList_dashboard" fxLayout="row wrap" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
+        <div fxFlex="10%" fxFlex.xl="10%" fxFlex.lg="15%" fxFlex.md="20%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
+      <app-product-item
+      [productItem]="productItem"></app-product-item>
+        </div></div>
     </div>
-  </div>
+
+  
 </mat-tab>
 
 <mat-tab label="sold Products">
