--- a/frontend/src/app/components/dialog-body/dialog-body.component.html
+++ b/frontend/src/app/components/dialog-body/dialog-body.component.html
@@ -3,14 +3,11 @@
   <p>Please enter a valid email</p>
   <mat-form-field>
     <input matInput placeholder="Email" [(ngModel)]="email" name="email">
-    <div *ngIf="!empty(email)">
-      <div *ngIf="!validateEmail(email)">Valid email is required</div>
-    </div>
   </mat-form-field>
 </div>
-<div mat-dialog-actions>
-  <button mat-button (click)="closeDialog(email)" [disabled]="empty(email) || !validateEmail(email)" [routerLink]="['/login']">Submit</button>
-  <button class="clearIcon" mat-button matSuffix mat-icon-button (click)="closeDialog(email)">
+<div fxLayoutAlign="end">
+  <button mat-button matSuffix mat-icon-button (click)="closeDialog(email)">
     <mat-icon>close</mat-icon>
   </button>
+  <button mat-button (click)="closeDialog(email)" [disabled]="empty(email) || !validateEmail(email)" [routerLink]="['/login']">Submit</button>
 </div>
