--- a/frontend/src/app/components/product-detail/product-detail.component.html
+++ b/frontend/src/app/components/product-detail/product-detail.component.html
@@ -48,7 +48,12 @@
 </mat-card>
 
 <mat-card-actions>
-<button mat-flat-button class="button_standard"  [routerLink]="['/shipping', productId]" routerLinkActive="active" [disabled]="checkCash() || !isAvailable || !isUserLoggedIn || checkUser()">Buy</button>
+  <div *ngIf="!isUserLoggedIn">
+    <button mat-flat-button class="button_standard" routerLink="/login">Buy</button>
+  </div>
+  <div *ngIf="isUserLoggedIn">
+  <button mat-flat-button class="button_standard"  [routerLink]="['/shipping', productId]" routerLinkActive="active" [disabled]="checkCash() || !isAvailable || !isUserLoggedIn || checkUser()">Buy</button>
+  </div>
 </mat-card-actions>
 
   <mat-card>
